<resources>
    <string name="app_name">SIPP KLING</string>
    <string name="rs">RS</string>
    <string name="sab">SAB</string>
    <string name="dam">Depot Air Minum</string>
    <string name="ttu">TTU</string>
    <string name="tpm">TPM</string>
    <string name="pjb">PJB</string>
    <string name="pkl">PKL</string>
    <string-array name="choice_array">
        <item>YA</item>
        <item>TIDAK</item>
    </string-array>
    <string name="ket">Keterangan :</string>
    <string name="ketRS">1. RS = Rumah Sehat</string>
    <string name="RS_Jamban"><b>Jamban Sehat</b></string>
    <string name="RS_JambanKet">Menggunakan jamban?</string>
    <string name="RS_Jamban1">Septik Tank</string>
    <string name="RS_Jamban2">Koya / Empang</string>
    <string name="RS_Jamban3">Kali</string>
    <string name="RS_Jamban4">Helikopter</string>
    <string name="RS_SPAL"><b>SPAL</b></string>
    <string name="RS_SPAL1">Tertutup</string>
    <string name="RS_SPAL2">Terbuka</string>
    <string name="nik">NIK (Sesuai KK)</string>
    <string name="noKIS">No KIS</string>
    <string name="statusRumah">Status Rumah:</string>
    <string name="statusRumah1">Kontrak</string>
    <string name="statusRumah2">Milik Sendiri</string>
    <string name="ketSAB">2. SAB = Sumber Air Bersih</string>
    <string name="ketTTU">4. TTU = Tempat_tempat Umum</string>
    <string name="ketTPM">2. TPM = Tempat Pengelolaan Makan</string>
    <string name="ketPJB">6. PJB = Pemantauan Jentik Berkala</string>
    <string name="ketPJB3"><b>Pemantauan Jentik Berkala</b></string>
    <string name="ketPJB2">Apakah ada jentik?</string>
    <string name="ketPKL">3. PKL = Pelayanan Kesehatan Lingkungan</string>
    <string-array name="sab_arrays">
        <item>Pompa Tangan Dangkal/Dalam/Listrik</item>
        <item>Sumur Gali</item>
        <item>Sumur Gali Plus</item>
        <item>Perpipaan/PDAM</item>
        <item>Mata Air</item>
    </string-array>
    <string name="rt_prompt">RT</string>
    <string-array name="rt_arrays">
        <item>RT 001</item>
        <item>RT 002</item>
        <item>RT 003</item>
        <item>RT 004</item>
        <item>RT 005</item>
        <item>RT 006</item>
        <item>RT 007</item>
        <item>RT 008</item>
        <item>RT 009</item>
        <item>RT 010</item>
        <item>RT 011</item>
        <item>RT 012</item>
        <item>RT 013</item>
        <item>RT 014</item>
        <item>RT 015</item>
        <item>RT 016</item>
        <item>RT 017</item>
        <item>RT 018</item>
        <item>RT 019</item>
        <item>RT 020</item>
    </string-array>
    <string name="rw_prompt">RW</string>
    <string-array name="rw_arrays">
        <item>RW 01</item>
        <item>RW 02</item>
        <item>RW 03</item>
        <item>RW 04</item>
        <item>RW 05</item>
        <item>RW 06</item>
        <item>RW 07</item>
        <item>RW 08</item>
        <item>RW 09</item>
        <item>RW 10</item>
        <item>RW 11</item>
        <item>RW 12</item>
        <item>RW 13</item>
        <item>RW 14</item>
        <item>RW 15</item>
        <item>RW 16</item>
        <item>RW 17</item>
        <item>RW 18</item>
        <item>RW 19</item>
        <item>RW 20</item>
    </string-array>
    <string name="namakk">Nama Kepala Keluarga</string>
    <string name="alamatkk">Alamat</string>
    <string name="jumlahkk">Jumlah Anggota Keluarga (sesuai kk)</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="nmrRmh">No. Rmh</string>
    <string name="next">Selesai</string>
    <string name="next2">Lanjut</string>
    <string name="jenisSAB">Pilih jenis SAB yang dipakai!</string>
    <string name="komponenRmh"><b>KOMPONEN RUMAH</b></string>
    <string name="komponenRmh1"><b>1. Langit_langit</b></string>
    <string name="komponenRmh1a">a. Tidak ada</string>
    <string name="komponenRmh1b">b. Ada, kotor, sulit dibersihkan dan rawan kecelakaan</string>
    <string name="komponenRmh1c">c. Ada, bersih dan tidak rawan kecelakaan</string>
    <string name="komponenRmh2"><b>2. Dinding</b></string>
    <string name="komponenRmh2a">a. Bukan tembok (terbuat dari anyaman bambu dan ilalang)</string>
    <string name="komponenRmh2b">b. Semi permanen/ setengah tembok/ pasangan bata dan batu yang tidak diplester/ papan yang tidak kedap air</string>
    <string name="komponenRmh2c">c. Permanen (tembok/ pasangan batu bata yang diplesteer) papan kedap air</string>
    <string name="komponenRmh3"><b>3. Lantai</b></string>
    <string name="komponenRmh3a">a. Tanah</string>
    <string name="komponenRmh3b">b. Papan/ Anyaman bambu dekat dengan tanah/ plesteran yang retak dan berdebu</string>
    <string name="komponenRmh3c">c. Diplester/ ubin/ keramik/papan (rumah panggung)</string>
    <string name="komponenRmh4"><b>4. Jendela kamar tidur</b></string>
    <string name="komponenRmh4a">a. Tidak ada</string>
    <string name="komponenRmh4b">b. Ada</string>
    <string name="komponenRmh5"><b>5. Jendela ruang keluarga</b></string>
    <string name="komponenRmh5a">a. Tidak ada</string>
    <string name="komponenRmh5b">b. Ada</string>
    <string name="komponenRmh6"><b>6. Ventilasi</b></string>
    <string name="komponenRmh6a">a. Tidak ada</string>
    <string name="komponenRmh6b">b. Ada, Ada, luas ventilasi permanen \u003c10 persen dari luas lantai</string>
    <string name="komponenRmh6c">c. Ada, luas ventilasi permanen >10 persen dari luas lantai</string>
    <string name="komponenRmh7"><b>7. Lubang asap dapur</b></string>
    <string name="komponenRmh7a">a. Tidak ada</string>
    <string name="komponenRmh7b">b. Ada, lubang ventilasi dapur \u003c10 persen dari luas lantai dapur</string>
    <string name="komponenRmh7c">c. Ada, lubang ventilasi dapur >10 persen dari luas lantai dapur (asap keluar dengan sempurna) atau ada exhaust fan ada peralatan lain yang sejenis</string>
    <string name="komponenRmh8"><b>8. Pencahayaan</b></string>
    <string name="komponenRmh8a">a. Tidak terang, tidak dapat dipergunakan untuk membaca</string>
    <string name="komponenRmh8b">b. Kurang terang, sehingga kurang jelas membaca dengan normal</string>
    <string name="komponenRmh8c">c. Terang dan tidak silau sehingga dapat dipergunakan untuk membaca dengan normal</string>
    <string name="saranasanitasi"><b>SARANA SANITASI</b></string>
    <string name="saranasanitasi1"><b>1. Sarana air bersih (SGL/ SPT/ PP/ KU/ PAH)</b></string>
    <string name="saranasanitasi1a">a. Tidak ada</string>
    <string name="saranasanitasi1b">b. Ada, bukan milik sendiri dan tidak memenuhi syarat kesehatan</string>
    <string name="saranasanitasi1c">c. Ada, milik sendiri dan tidak memenuhi syarat kesehatan</string>
    <string name="saranasanitasi1d">d. Ada, bukan milik sendiri dan memenuhi syarat kesehatan</string>
    <string name="saranasanitasi1e">e. Ada, milik sendiri dan memenuhi syarat kesehatan</string>
    <string name="saranasanitasi2"><b>2. Jamban (Sarana pembuangan kotoran)</b></string>
    <string name="saranasanitasi2a">a. Tidak ada</string>
    <string name="saranasanitasi2b">b. Ada, bukan leher angsa, tidak ada tutup, disalurkan kesungai/kolam</string>
    <string name="saranasanitasi2c">c. Ada, bukan leher angsa ada ditutup (leher angsa), disalurkan kesungai/ kolam</string>
    <string name="saranasanitasi2d">d. Ada, bukan leher angsa ada tutup  septic tank</string>
    <string name="saranasanitasi2e">e. Ada, leher angsa, septic tank</string>
    <string name="saranasanitasi3"><b>3. Sarana pembuangan air limbah (SPAL)</b></string>
    <string name="saranasanitasi3a">a. Tidak ada, sehingga tergenang tidak teratur dihalaman rumah</string>
    <string name="saranasanitasi3b">b. Ada, diresapkan tetapi mencemari sumber air (jarak dengan sumber air \u003c 10m)</string>
    <string name="saranasanitasi3c">c. Ada, dialirkan keselokan terbuka</string>
    <string name="saranasanitasi3d">d. Ada, diresapkan tetapi mencemari sumber air (jarak dengan sumber air > 10m)</string>
    <string name="saranasanitasi3e">e. Ada, dialirkan keselokan tertutup (saluran kota) untuk diolah lebih lanjut</string>
    <string name="saranasanitasi4"><b>4. Sarana pembuangan sarana (tempat sampah )</b></string>
    <string name="saranasanitasi4a">a. Tidak ada</string>
    <string name="saranasanitasi4b">b. Ada, tetapi tidak kdepa air dan tidak ada tutup</string>
    <string name="saranasanitasi4c">c. Ada, kedap air dan tidak bertutup</string>
    <string name="saranasanitasi4d">d. Ada, kedep air dan bertutup</string>
    <string name="perilakupenghuni"><b>C. PERILAKU PENGHUNI</b></string>
    <string name="perilakupenghuni1"><b>1. Membuka jendela kamar tidur</b></string>
    <string name="perilakupenghuni1a">a. Tidak pernah dibuka</string>
    <string name="perilakupenghuni1b">b. kadang_kadang</string>
    <string name="perilakupenghuni1c">c. Setiap hari dibuka</string>
    <string name="perilakupenghuni2"><b>2. Membuka jendela ruang keluarga</b></string>
    <string name="perilakupenghuni2a">a. Tidak pernah dibuka</string>
    <string name="jenisSAB1"><b>POMPA TANGAN DANGKAL/ DALAM/ LISTRIK</b></string>
    <string name="ketSAB_ketUmum"><b>KETERANGAN UMUM</b></string>
    <string name="ketSAB_ketUmum1a">Puskesmas</string>
    <string name="ketSAB_ketUmum2">Kode Sarana</string>
    <string name="ketSAB_ketUmum5">Apakah telah diambil sampel airnya</string>
    <string name="ketSAB_ketUmum6">Nomor kode sampel air</string>
    <string name="ketSAB_ketUmum7">Golongan koloform/ 100ml</string>
    <string name="ketSAB_ketUmum8">8. Apakah airnya jernih?</string>
    <string name="ketSAB_ketUmum9">9. Apakah airnya berwarna?</string>
    <string name="ketSAB_ketUmum10">10. Apakah airnya berasa?</string>
    <string name="ketSAB_ketUmum11">11. Apakah airnya berbau?</string>
    <string name="SAB_DiagKhusus"><b>DIAGNOSA KHUSUS</b></string>
    <string name="SAB1_DiagKhusus1">1. Apakah ada jamban pada radius 10m disekitar mu sumur pompa tangan/listrik ?</string>
    <string name="SAB1_DiagKhusus2">2. Apakah ada sumber pencemaran lain pada radius 10m sekitar pompa tangan, misalnya kotoran hewan, sampah, genangan air dll?</string>
    <string name="SAB1_DiagKhusus3">3. Apakah ada sewaktu_waktu ada genangan air pada jarak 2m sekitar pompa?</string>
    <string name="SAB1_DiagKhusus4">4. Apakah ada saluran pembuangan air limbah rusak/ tidak ada?</string>
    <string name="SAB1_DiagKhusus5">5. Apakah lantai semen yang mengitari pompa tangan mempunyai radius kurang dari 1m?</string>
    <string name="SAB1_DiagKhusus6">6. Apakah ada/ sewaktu_waktu ada genangan air diatas lantai semen disekeliling pompa tangan/ listrik ?</string>
    <string name="SAB1_DiagKhusus7">7. Apakah ada keretakan pada lantai semen disekelilingi pompa tangan/ listrik?</string>
    <string name="SAB1_DiagKhusus8">8. Apakah dudukan pompa tangan/ lstrik yang berbatasan dengan laintai kurang rapat/ lepas. yang memungkinkan air merembes masuk kedalam sumur pompa tangan/ listrik ?</string>
    <string name="YA">YA</string>
    <string name="TIDAK">TIDAK</string>
    <string name="formSAB_j1">Berikut adalah form untuk Surveilans <b>Kualitas Air Bersih</b> formulir inspeksi sanitasi, silahkan Anda
    isi semua field ini sesuai prosedur yang telah diurutkan</string>
    <string name="formPKL">Berikut adalah form untuk <b>pelayanan kesehatan lingkungan</b>,
        silahkan Anda isi semua field ini sesuai prosedur yang telah diurutkan</string>
    <string name="pkl_1">Nama</string>
    <string name="pkl_2">Umur</string>
    <string name="pkl_3">Jenis Kelamin</string>
    <string name="lk">Laki_laki</string>
    <string name="cw">Perempuan</string>
    <string name="pkl_4">Alamat</string>
    <string name="pkl_5">Kasus</string>
    <string name="pkl_6">Pelayanan KesLing</string>
    <string name="pkl_7">Dalam Gedung</string>
    <string name="pkl_8">Luar Gedung</string>
    <string name="pkl_9">Nama Tempat</string>
</resources>