<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tiregdev.sipepikeling.pkl">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formPKL"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#b7b7b7" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/pkl_1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_umur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/umur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/pkl_2" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkl_3"
                android:layout_marginTop="5dp"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/jk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rblk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lk" />

                <RadioButton
                    android:id="@+id/rbpr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cw" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusable="false"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/pkl_4" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_kasus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/kasus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/pkl_5" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkl_6"
                android:layout_marginTop="5dp"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/jenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/jenis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pkl_7" />

                <RadioButton
                    android:id="@+id/jenis2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pkl_8" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_namaTempat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tempat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/pkl_9" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_green"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
